--- a/Tugas AndroFundamental/Tugas1/app/src/main/res/values/colors.xml
+++ b/Tugas AndroFundamental/Tugas1/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#FFFFF7F2</color>
+    <color name="button">#FFBE6690</color>
 </resources>
