--- a/Tugas AndroFundamental/Tugas1/app/src/main/res/layout/activity_registrasi.xml
+++ b/Tugas AndroFundamental/Tugas1/app/src/main/res/layout/activity_registrasi.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="SignUp"
-                android:id="@+id/loginText"
+                android:id="@+id/signupText"
                 android:textSize="36sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
@@ -81,6 +81,17 @@
                 android:drawablePadding="8dp"
                 />
 
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:id="@+id/edt_confirmpassword"
+                android:layout_marginTop="20dp"
+                android:padding="8dp"
+                android:hint="Confirm Password"
+                android:drawableLeft="@drawable/baseline_lock_person_24"
+                android:textColor="@color/black"
+                android:drawablePadding="8dp"
+                />
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
