--- a/Tugas AndroFundamental/Tugas1/app/src/main/res/layout/activity_main.xml
+++ b/Tugas AndroFundamental/Tugas1/app/src/main/res/layout/activity_main.xml
@@ -30,4 +30,14 @@
         android:backgroundTint="@color/button"
         app:cornerRadius="20dp"/>
 
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:text="Next"
+        android:id="@+id/btn_next"
+        android:textSize="18sp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/button"
+        app:cornerRadius="20dp"/>
+
 </LinearLayout>
